--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
   <h1>Sobre o Projeto</h1>
   <p>Este projeto foi criado como parte da disciplina de DevOps.</p>
   <p>O objetivo é aprender sobre integração e entrega contínuas (CI/CD) usando GitHub.</p>
-  <p>Desenvolvido por [Seu Nome Aqui].</p>
+  <p>Desenvolvido por Eduardo.</p>
 </body>
 </html>
 
